# rendercore

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  rendercore-config.cmake  rendercore.code-workspace  todo.txt
data/rendercore/gltf/BoomBox/: BoomBox.gltf
data/rendercore/gltf/BoxAnimated/: BoxAnimated.gltf
data/rendercore/gltf/PbrTest/: PbrTest.gltf
data/rendercore/gltf/Taxi/: Taxi.gltf
data/rendercore/shaders/geometry/: basic.frag  basic.vert  geometry.frag  geometry.vert  gltf.frag  gltf.vert
data/rendercore/shaders/pbr/: pbr.frag  pbr.vert
deploy/: CMakeLists.txt
source/: CMakeLists.txt
source/rendercore/: CMakeLists.txt
source/rendercore-examples/: CMakeLists.txt
source/rendercore-examples/include/rendercore-examples/: ExampleRenderer.h  GeometryExample.h  GeometryExampleRenderer.h  GeometryRenderer.h  GltfExampleRenderer.h  GltfRenderer.h  MeshExampleRenderer.h
source/rendercore-examples/source/: ExampleRenderer.cpp  GeometryExample.cpp  GeometryExampleRenderer.cpp  GeometryRenderer.cpp  GltfExampleRenderer.cpp  GltfRenderer.cpp  MeshExampleRenderer.cpp
source/rendercore-glfw/: CMakeLists.txt
source/rendercore-glfw/include/rendercore-glfw/: Application.h  GLContext.h  GLContextFactory.h  RenderWindow.h  Window.h  WindowEvent.h  WindowEventDispatcher.h
source/rendercore-glfw/source/: Application.cpp  GLContext.cpp  GLContextFactory.cpp  RenderWindow.cpp  Window.cpp  WindowEvent.cpp  WindowEventDispatcher.cpp
source/rendercore-gltf/: CMakeLists.txt
source/rendercore-gltf/include/rendercore-gltf/: Accessor.h  Asset.h  Buffer.h  BufferView.h  GltfConverter.h  GltfLoader.h  Image.h  Material.h  Mesh.h  Node.h  Primitive.h  Sampler.h  Scene.h  Texture.h  TextureInfo.h
source/rendercore-gltf/source/: Accessor.cpp  Asset.cpp  Buffer.cpp  BufferView.cpp  GltfConverter.cpp  GltfLoader.cpp  Image.cpp  Material.cpp  Mesh.cpp  Node.cpp  Primitive.cpp  Sampler.cpp  Scene.cpp  Texture.cpp  TextureInfo.cpp
source/rendercore-opengl/: CMakeLists.txt
source/rendercore-opengl/include/rendercore-opengl/: AbstractGLContext.h  AbstractGLContextFactory.h  Box.h  Buffer.h  Buffer.inl  Drawable.h  Drawable.inl  ExampleRenderer.h  GLContextFormat.h  GLContextUtils.h  Geometry.h  Geometry.inl  Geometry2.h  Geometry2.inl  GlrawTextureLoader.h  Icosahedron.h  Material.h  Material.inl  MaterialAttribute.h  MaterialAttribute.inl  Mesh.h  Mesh.inl  MeshRenderer.h  Primitive.h  Program.h  Quad.h  RawFileNameSuffix.h  SceneRenderer.h  Shader.h  ShaderLoader.h  Shape.h  ShapeType.h  Sphere.h  Texture.h  TextureLoader.h  TimeMeasurement.h  Triangle.h  VertexAttribute.h  enums.h
source/rendercore-opengl/include/rendercore-opengl/scene/: MeshComponent.h
source/rendercore-opengl/source/: AbstractGLContext.cpp  AbstractGLContextFactory.cpp  Box.cpp  Buffer.cpp  Drawable.cpp  ExampleRenderer.cpp  GLContextFormat.cpp  GLContextUtils.cpp  Geometry.cpp  Geometry2.cpp  GlrawTextureLoader.cpp  Icosahedron.cpp  Material.cpp  MaterialAttribute.cpp  Mesh.cpp  MeshRenderer.cpp  Primitive.cpp  Program.cpp  Quad.cpp  RawFileNameSuffix.cpp  SceneRenderer.cpp  Shader.cpp  ShaderLoader.cpp  Shape.cpp  Sphere.cpp  Texture.cpp  TextureLoader.cpp  TimeMeasurement.cpp  Triangle.cpp  VertexAttribute.cpp
source/rendercore-opengl/source/scene/: MeshComponent.cpp
source/rendercore/include/rendercore/: AbstractContext.h  AbstractDrawable.h  AbstractSignal.h  Cached.h  Cached.inl  CachedValue.h  Camera.h  Canvas.h  ChronoTimer.h  Connection.h  Environment.h  GpuContainer.h  GpuObject.h  Image.h  ImageLoader.h  Renderer.h  ScopedConnection.h  Signal.h  Signal.inl  Transform.h  rendercore.h
source/rendercore/include/rendercore/base/: AbstractContext.h  AbstractGLContext.h  AbstractGLContextFactory.h  CachedValue.h  CachedValue.inl  Canvas.h  ChronoTimer.h  Environment.h  ExampleRenderer.h  GLContextFormat.h  GLContextUtils.h  Renderer.h  TimerManager.h
source/rendercore/include/rendercore/loaders/: GlrawTextureLoader.h  RawFileNameSuffix.h  ShaderLoader.h
source/rendercore/include/rendercore/rendering/: Box.h  Camera.h  CameraUtils.h  Drawable.h  Drawable.inl  Icosahedron.h  Quad.h  Shape.h  ShapeType.h  Sphere.h  Triangle.h
source/rendercore/include/rendercore/scene/: Scene.h  SceneNode.h  SceneNode.inl  SceneNodeComponent.h
source/rendercore/source/: AbstractContext.cpp  AbstractDrawable.cpp  AbstractSignal.cpp  Camera.cpp  CameraUtils.cpp  Canvas.cpp  ChronoTimer.cpp  Connection.cpp  Environment.cpp  GpuContainer.cpp  GpuObject.cpp  Icosahedron.cpp  Image.cpp  ImageLoader.cpp  Renderer.cpp  ScopedConnection.cpp  Transform.cpp  rendercore.cpp
source/rendercore/source/base/: AbstractContext.cpp  AbstractGLContext.cpp  AbstractGLContextFactory.cpp  Canvas.cpp  ChronoTimer.cpp  Environment.cpp  ExampleRenderer.cpp  GLContextFormat.cpp  GLContextUtils.cpp  Renderer.cpp  TimerManager.cpp
source/rendercore/source/loaders/: GlrawTextureLoader.cpp  RawFileNameSuffix.cpp  ShaderLoader.cpp
source/rendercore/source/rendering/: AbstractDrawable.cpp  Box.cpp  Camera.cpp  CameraUtils.cpp  Drawable.cpp  Icosahedron.cpp  Quad.cpp  Shape.cpp  Sphere.cpp  Triangle.cpp
source/rendercore/source/scene/: Scene.cpp  SceneNode.cpp  SceneNodeComponent.cpp
source/viewer-glfw/: CMakeLists.txt  main.cpp
